# esp32c3-fan-temperature-controller

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
